--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5348,6 +5348,7 @@
     <string name="lockscreen_buttons_camera">Launch camera</string>
     <string name="lockscreen_buttons_power_off">Power off</string>
 
+    <!--Active Display-->
     <string name="ad_settings_title">Active display</string>
     <string name="ad_settings_summary">Change active display settings</string>
     <string name="ad_enable_title">Enable</string>
@@ -5377,6 +5378,13 @@
     <string name="ad_redisplay_1h">1 hour</string>
     <string name="ad_redisplay_2h">2 hours</string>
     <string name="ad_redisplay_5h">5 hours</string>
+    <string name="ad_timeout_title">Display timeout</string>
+    <string name="ad_timeout_3s">3 seconds</string>
+    <string name="ad_timeout_5s">5 seconds</string>
+    <string name="ad_timeout_8s">8 seconds</string>
+    <string name="ad_timeout_10s">10 seconds</string>
+    <string name="ad_timeout_15s">15 seconds</string>
+    <string name="ad_timeout_25s">25 seconds</string>
 
     <!-- Quick settings panel  -->
     <string name="quick_settings_panel_title">Quick Settings panel</string>
