add back appop strings that were removed accidentally. Signed-off-by: scott <scott@ubuntu.com>
Change-Id: I9e2784183c7946081fb25b4efaf8637294bdb654

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2908,6 +2908,10 @@
         If you turn off notifications for this app, you may miss important alerts and updates.
     </string>
 
+    <!-- App Ops -->
+    <string name="appops_settings_title">App privacy</string>
+    <string name="appops_settings_summary">App Ops: App Permission Manager, control permissions for individual apps</string>
+
     <!-- App Ops Settings --> <skip />
     <!-- [CHAR LIMIT=NONE] App ops settings title, on main settings screen. If clicked, the user is taken to a settings screen for app operations -->
     <string name="app_ops_settings">App ops</string>
