Settings: Long Term Orbits (LTO)
Patchset 2: Opt-In LtoService (if device supports LTO) and simplify the code
            Rebased
Patchset 3: Added LocationSettings suggestions
            Rebased

Require http://review.cyanogenmod.org/#/c/51421

Change-Id: I878104eb3c859168faa10467fab3772a2f639288
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/cm_strings.xml
	res/xml/location_settings.xml
	src/com/android/settings/LocationSettings.java
	src/com/android/settings/cyanogenmod/BootReceiver.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6667,4 +6667,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="location_gps_source_notification_title">Alert</string>
     <string name="location_gps_source_notification">The GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
 
+    <!-- GPS download data over wi-fi only -->
+    <string name="gps_download_data_wifi_only">Download GPS assisted data only over Wi-Fi networks</string>
+
 </resources>
