Settings: Security: implement a pin keypad shuffler [2/2]
this is to further prevent people using the tablet guessing your pin based on fingerprints left on the screen
example of the expected outcome - https://www.dropbox.com/sh/r3xb2q53ksaqni9/Oz1Eu8Dm7O

PatchSet:
- fix checkbox was wrong assigned
- enable only for PIN Password lock
- small cleanup of old code

PatchSet:
- cleanup

PatchSet:
- add modes.....disabled/always/on request

Change-Id: I7e485827f6d62ee239015cfa96f2a20169d28486
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/slim_arrays.xml
	res/values/slim_strings.xml
	src/com/android/settings/SecuritySettings.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6646,6 +6646,11 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <string name="lock_before_unlock_title">Show slider before secure unlock</string>
     <string name="lock_before_unlock_summary">Show slider lockscreen before secure unlock mechanism</string>
+    <string name="lock_numpad_random_title">Change the order of PIN pad numbers</string>
+    <string name="lock_numpad_random_dialog_title">PIN pad random order</string>
+    <string name="lock_numpad_random_off">Disabled</string>
+    <string name="lock_numpad_random_always">Always</string>
+    <string name="lock_numpad_random_on_request">On request</string>
 
     <!-- Status bar brightness slider -->
     <string name="brightness_slider_title">Statusbar brightness slider</string>
