Network color preference 2/2 thanks carbon Signed-off-by: scott <scott@ubuntu.com>
Change-Id: I5a8a6966ea8b770dca8aaa772119c1ca871116ff

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5276,6 +5276,9 @@
     <string name="status_bar_title">Status bar</string>
     <string name="status_bar_general_title">General</string>
     <string name="status_bar_network_title">Network traffic</string>
+    <string name="status_bar_network_color_title">Network color</string>
+    <string name="status_bar_network_color_reset">Reset network color</string>
+    <string name="status_bar_icon_color_reset">Reset icon color</string>
     <string name="status_bar_show_network_stats_title">Show network speeds</string>
     <string name="status_bar_network_stats_update_title">Update frequency</string>
     <string name="status_bar_battery_title">Battery status style</string>
