[2/2] settings: add CPU info overlay
this shows
CPU temp (if available)
for every core governor + online + freq

Change-Id: I28c1e48c2e613b33c301b61cead70678ab6a2e9b
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/custom_strings.xml

Conflicts:
	res/values/strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6704,4 +6704,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="summary_animation_no_override">Prevent apps from overriding transitions.</string>  
     <string name="animation_duration_default">Default</string>
     <string name="header_summary_animation">@null</string>
+
+    <!--CPU info-->
+    <string name="show_cpu_info">Show CPU info</string>
+    <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
 </resources>
