Active display: Allow apps to be excluded from being displayed [2/2]
Change-Id: Ieb6368c050f5b46eec7398ab0162dc4fbf00a392
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/strings.xml
	src/com/android/settings/cyanogenmod/ActiveDisplaySettings.java

Conflicts:
	res/values-de/ck_strings.xml
	res/values/ck_strings.xml
	src/com/android/settings/cyanogenmod/ActiveDisplaySettings.java

Conflicts:
	res/values/cm_strings.xml
	src/com/android/settings/beanstalk/ActiveDisplaySettings.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5404,6 +5404,8 @@
     <string name="ad_timeout_10s">10 seconds</string>
     <string name="ad_timeout_15s">15 seconds</string>
     <string name="ad_timeout_25s">25 seconds</string>
+    <string name="ad_excluded_apps_title">Excluded applications</string>
+    <string name="ad_excluded_apps_summary">Excluded applications will not show up in active display</string>
 
     <!-- Quick settings panel  -->
     <string name="quick_settings_panel_title">Quick Settings panel</string>
