--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6710,4 +6710,9 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <!--CPU info-->
     <string name="show_cpu_info">Show CPU info</string>
     <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
+
+    <!-- Lockscreen Lid Settings -->
+    <string name="smart_cover_category_title">Smart cover</string>
+    <string name="smart_cover_wake_title">Smart cover wake</string>
+    <string name="smart_cover_wake_summary">Wakeup device when smart cover opens</string>
 </resources>
