--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5281,6 +5281,7 @@
     <string name="status_bar_icon_color_reset">Reset icon color</string>
     <string name="status_bar_show_network_stats_title">Show network speeds</string>
     <string name="status_bar_show_network_stats_summary">Show network speed in statusbar (ChaOS)</string>
+    <string name="battery_around_lockscreen_ring">Battery level around lock ring</string>
     <string name="status_bar_network_stats_update_title">Update frequency</string>
     <string name="show_network_speed">Network speed indicator</string>
     <string name="show_network_speed_summary">Show network speed in statusbar (Thinking Bridge)</string>
